deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeployment
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 3
  selector:
    matchLabels:
      app: nginx-webserver
  template:
    metadata:
      labels:
        app: nginx-webserver
        environment: demo
        authorship: sunil
    spec:
      containers:
      - name: c1
        image: leaddevops/kubeserve:v1
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"

# added the content of replicaset.yaml to deployment.yaml as deployment is the higher level object which manages the replica set and the replica set manages the pods. so we can directly define the pod template in the deployment and it will create the replica set and the pods for us.
# added some more content.
# new content is added
      - name: c2
        image: leaddevops/kubeserve:v1
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
