multi-container-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    app: webserver
    environment: demo
    authorship: sunil
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
    ports:
    - containerPort: 80
  - name: redis-container
    image: redis:latest
    ports:
    - containerPort: 6379
  - name: ubuntu-container
    image: ubuntu:latest
    command: ["sleep", "infinity"]
  - name: httpd-container
    image: httpd:latest
    ports:
    - containerPort: 8080
