nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: webserver
    environment: demo
    authorship: sunil
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
    ports:
    - containerPort: 8080
