ubuntu-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-pod
  labels:
    app: webserver
    environment: demo
    authorship: sunil
spec:
  containers:
  - name: ubuntu-container
    image: ubuntu:latest
    command: ["sleep", "infinity"]
