service-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice-lb
spec: 
  type: LoadBalancer
  selector:
    app: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
