service-nodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice-np
spec: 
  type: NodePort
  selector:
    app: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
